Update api definition
