# main.go
@@ -47,17 +47,20 @@ func main() {
 	basicAuthRouter.Get("/services/:service_id", (*api.Context).GetService)
 	basicAuthRouter.Post("/services", (*api.Context).AddService)
 	basicAuthRouter.Put("/services/:service_id", (*api.Context).UpdateService)
+	basicAuthRouter.Patch("/services/:service_id", (*api.Context).UpdateService)
 	basicAuthRouter.Delete("/services/:service_id", (*api.Context).DeleteService)
 
 	basicAuthRouter.Get("/services/:service_id/plans", (*api.Context).Plans)
 	basicAuthRouter.Get("/services/:service_id/plans/:plan_id", (*api.Context).GetPlan)
 	basicAuthRouter.Post("/services/:service_id/plans", (*api.Context).AddPlan)
+	basicAuthRouter.Patch("/services/:service_id/plans/:plan_id", (*api.Context).UpdatePlan)
 	basicAuthRouter.Put("/services/:service_id/plans/:plan_id", (*api.Context).UpdatePlan)
 	basicAuthRouter.Delete("/services/:service_id/plans/:plan_id", (*api.Context).DeletePlan)
 
 	basicAuthRouter.Get("/services/:service_id/instances", (*api.Context).Instances)
 	basicAuthRouter.Get("/services/:service_id/instances/:instances_id", (*api.Context).GetInstance)
 	basicAuthRouter.Post("/services/:service_id/instances", (*api.Context).AddInstance)
+	basicAuthRouter.Patch("/services/:service_id/instances/:instances_id", (*api.Context).UpdateInstance)
 	basicAuthRouter.Put("/services/:service_id/instances/:instances_id", (*api.Context).UpdateInstance)
 	basicAuthRouter.Delete("/services/:service_id/instances/:instances_id", (*api.Context).DeleteInstance)
 
@@ -65,28 +68,30 @@ func main() {
 	basicAuthRouter.Get("/applications/:application_id", (*api.Context).GetApplication)
 	basicAuthRouter.Post("/applications", (*api.Context).AddApplication)
 	basicAuthRouter.Put("/applications/:application_id", (*api.Context).UpdateApplication)
+	basicAuthRouter.Patch("/applications/:application_id", (*api.Context).UpdateApplication)
 	basicAuthRouter.Delete("/applications/:application_id", (*api.Context).DeleteApplication)
 
 	basicAuthRouter.Get("/applications/:application_id/instances", (*api.Context).Instances)
 	basicAuthRouter.Get("/applications/:application_id/instances/:instances_id", (*api.Context).GetInstance)
 	basicAuthRouter.Post("/applications/:application_id/instances", (*api.Context).AddInstance)
 	basicAuthRouter.Put("/applications/:application_id/instances/:instances_id", (*api.Context).UpdateInstance)
+	basicAuthRouter.Patch("/applications/:application_id/instances/:instances_id", (*api.Context).UpdateInstance)
 	basicAuthRouter.Delete("/applications/:application_id/instances/:instances_id", (*api.Context).DeleteInstance)
 
 	basicAuthRouter.Get("/instances", (*api.Context).Instances)
 	basicAuthRouter.Get("/instances/:instances_id", (*api.Context).GetInstance)
-	basicAuthRouter.Get("/instances/:instances_id", (*api.Context).DeleteInstance)
-	basicAuthRouter.Put("/instances/:instances_id", (*api.Context).UpdateInstance)
-	basicAuthRouter.Put("/instances/:instances_id/states/state_name", (*api.Context).UpdateInstanceState)
-	basicAuthRouter.Put("/instances/:instances_id/bindings/:binding_id", (*api.Context).AddInstanceBinding)
+	basicAuthRouter.Delete("/instances/:instances_id", (*api.Context).DeleteInstance)
+	basicAuthRouter.Patch("/instances/:instances_id", (*api.Context).UpdateInstance)
+
+	basicAuthRouter.Post("/instances/:instances_id/bindings", (*api.Context).AddInstanceBinding)
 	basicAuthRouter.Delete("/instances/:instances_id/bindings/:binding_id", (*api.Context).DeleteInstanceBinding)
-	basicAuthRouter.Put("/instances/:instances_id/meta/:key", (*api.Context).AddInstanceMetadata)
+	basicAuthRouter.Post("/instances/:instances_id/meta", (*api.Context).AddInstanceMetadata)
 	basicAuthRouter.Delete("/instances/:instances_id/meta/:key", (*api.Context).DeleteInstanceMetadata)
 
 	basicAuthRouter.Get("/templates", (*api.Context).Templates)
 	basicAuthRouter.Get("/templates/:template_id", (*api.Context).GetTemplate)
 	basicAuthRouter.Delete("/templates/:template_id", (*api.Context).DeleteTemplate)
-	basicAuthRouter.Put("/templates/:templates_id/states/state_name", (*api.Context).UpdateTemplateState)
+	basicAuthRouter.Put("/templates/:templates_id", (*api.Context).UpdateTemplateState)
 
 	port := os.Getenv("PORT")
 	log.Println("Will listen on:", "0.0.0.0:"+port)
